<resources>
    <string name="app_name">FlyEasy</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_hotels">Hotels</string>
    <string name="title_news">News</string>
    <string name="flight_logo">logo</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="depart_date">DepartDate</string>
    <string name="arrive">Arrive</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="rating">Rating</string>
    <string name="depart">Depart</string>
    <string name="book">Book</string>
    <string name="moneylogo">moneyLogo</string>
    <string name="ticket">Ticket</string>
    <string name="travel_class">Travel Class</string>
    <string name="passenger_name">Passenger name</string>
    <string name="identification_number">Identification number</string>
    <string name="contactlogo">contactLogo</string>
    <string name="next">Next</string>
    <string name="price_ticket">Price Ticket</string>
    <string name="use_bonus">Use bonus(%)</string>
    <string name="total_price">Total price</string>
    <string name="pay">Pay</string>
    <string name="confirmed_payment">Confirmed payment</string>
    <string name="canceled_payment">Canceled payment</string>
    <string name="your_booked_tickets">Your booked tickets</string>
    <string name="look_for_available_hotel">Look for available hotel</string>
    <string name="thumbnails">thumbnails</string>
    <string name="imagepreview">imagePreview</string>
    <string name="room_type">Room Type</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search hotel</string>
    <string name="toolbar_title">Hotels</string>

    <string name="personal_information">Personal information</string>
    <string name="flight_bonus">Flight bonus</string>
    <string name="my_flights">My flights</string>
    <string name="my_hotels">My Hotels</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="location">Location</string>
    <string name="birth_date">Birth date</string>
    <string name="personal_infromation">Personal Information</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="update_personal_information">Update personal information</string>
    <string name="article_image">Article Image</string>

    <string name="business_category">Business</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="general_category">General</string>
    <string name="health_category">Health</string>
    <string name="science_category">Science</string>
    <string name="sports_category">Sports</string>
    <string name="technology_category">Technology</string>
    <string name="all">All</string>
    <string name="flyeasy">FlyEasy</string>

    <string name="logout">Logout</string>
    <string name="from_price">From price</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="change_password">Change password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forget_password">Forget Password</string>

</resources>
