<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="344dp"
        android:layout_height="222dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/passenger_card"
            android:layout_width="match_parent"
            android:layout_height="211dp">

            <EditText
                android:id="@+id/passengerName"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="10"
                android:hint="@string/passenger_name"
                android:inputType="textPersonName"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/identificationNumber"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="56dp"
                android:ems="10"
                android:hint="@string/identification_number"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/passengerEmail"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/contactLogo"
                android:layout_width="76dp"
                android:layout_height="62dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/contactlogo"
                card_view:srcCompat="@drawable/contacts_icons" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>