<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingFragment">


    <RelativeLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_picture"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:contentDescription="@string/profile_picture"
            app:civ_border_color="#0fffffff"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/setting_list"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="179dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/update_personal_information"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/update_personal_information"
                android:textSize="16sp"
                android:clickable="true"/>

            <TextView
                android:id="@+id/chage_password"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textSize="16sp"
                android:clickable="true"/>

        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>