<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_hotel_details">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/hotel_picture_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/description_hotel"
        android:layout_width="323dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="204dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="163dp"
        android:layout_marginStart="126dp"
        android:text="@string/price"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/price_hotel"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinnerRoom"
        android:layout_alignTop="@+id/price_label"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/hotelBookBtn"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/book" />

    <Spinner
        android:id="@+id/spinnerRoom"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/spinnerRoom_lable" />

    <TextView
        android:id="@+id/spinnerRoom_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/price_label"
        android:layout_marginBottom="118dp"
        android:text="@string/room_type"
        android:textAlignment="textStart"
        android:textSize="18sp" />


</RelativeLayout>